styled: style refactor;

--- a/css/层叠上下文.md
+++ b/css/层叠上下文.md
@@ -2,14 +2,16 @@
 
 ![](https://image.zhangxinxu.com/image/blog/201601/2016-01-09_211116.png)
 
-## 1. 概念：
+## 1. 概念
+
 - 层叠上下文，如果一个元素含有层叠上下文
 - 层叠水平。决定了同一层叠上下文元素在z轴上的显示顺序。
 - 层叠顺序。如上图。
-  - 谁大谁上，具有层级标识时，如z-index。
-  - 后来居上。DOM流后面的元素会覆盖前面的元素。
+  - 谁大谁上，具有层级标识时，如：`z-index`。
+  - 后来居上。DOM 流后面的元素会覆盖前面的元素。
 
 ## 2. 特性
+
 - 层叠水平要比普通元素高。
 - 层叠上下文可以阻断元素的混合模式。
 - 层叠上下文可以嵌套，内部的层级上下文和子元素受制于外部的层叠上下文。
@@ -17,12 +19,12 @@
 
 ## 3. 创建层叠上下文
 
-1. 根层叠上下文，```<html>```
-2. 定位元素与传统层叠上下文。当position不为static且z-index不是auto时（z-index为auto时，视为普通元素）。
+1. 根层叠上下文，`<html>`
+2. 定位元素与传统层叠上下文。当 `position` 不为 `static` 且 `z-index` 不是 `auto` 时（`z-index` 为 `auto` 时，视为普通元素）。
 3. css3的层叠上下文。
-  - zindex不为auto的flex。
-  - opacity不为1
-  - transform不为none
-  - filter不为none
-  - mix-blend-mode不是normal（混合模式）
-  - 元素的isolation值是isolate
+  - `z-index` 不为 `auto` 的 `flex` 。
+  - `opacity` 不为1
+  - `transform` 不为 `none`
+  - `filter` 不为 `none`
+  - `mix-blend-mode` 不是 `normal` （混合模式）
+  - 元素的 `isolation` 值是 `isolate`
