--- a/性能优化/系统地优化页面性能.md
+++ b/性能优化/系统地优化页面性能.md
@@ -37,7 +37,7 @@
   - 推迟非关键CSS
 
 ## LCP
-- 阻塞渲染的JS和CSS：HTML 解析器遇到任何外部样式表（<link rel="stylesheet">）或同步 JavaScript 标签（<script src="main.js">），则会暂停解析。
+- 阻塞渲染的JS和CSS：HTML 解析器遇到任何外部样式表`<link rel="stylesheet">` 或同步 JavaScript 标签 `<script src="main.js">` ，则会暂停解析。
   - 减少CSS阻塞时间
     - 压缩css`optimize-css-assets-webpack-plugin`
     - 延迟加载非关键的css
