--- a/打包器/webpack/基础篇.md
+++ b/打包器/webpack/基础篇.md
@@ -1,13 +1,15 @@
 # 基础篇
 
 ## 构建工具
-- 转换ES6以上的语法
-- 转换JSX
+
+- 转换 ES6 以上的语法
+- 转换 JSX
 - css预处理器，前缀补全
 - 代码压缩混淆
 - 图片压缩
 
 ## 前端构建之路
+
 - 刀耕火种时代，通过线上工具，去处理完再下载到本地。
 - grunt。打包分成多个任务，每次打包完存入磁盘，涉及到许多IO操作
 - gulp。文件流，存入内存。解决了IO操作的问题。
@@ -15,30 +17,35 @@
 
 
 ## loader
+
 - 处理不能解析的文件类型，css
-- css-loader。加载CSS，转换为`commonJS`对象。
-- style-loader。通过`<style>`标签插入到head里
-- raw-loader。文件内容以字符串形式注入
-- thread-loader。多线程
-- url-loader。同file-loader处理字体图片功能之余，还能设置`较小资源自动base64`
+- `css-loader` 。加载CSS，转换为 `commonJS` 对象。
+- `style-loader` 。通过`<style>`标签插入到head里
+- `raw-loader` 。文件内容以字符串形式注入
+- `thread-loader` 。多线程
+- `url-loader` 。同 `file-loader` 处理字体图片功能之余，还能设置 `较小资源自动base64`
 
 ## plugin
+
 ![](/image/cbb73aad9937e05150a88f39afeddee.png)
-- 增强webpack的功能，用于bundle文件的优化，资源的管理，环境注入。
-### JS
-- uglifyjsWebpackPlugin，压缩JS
+- 增强 `webpack` 的功能，用于 bundle 文件的优化，资源的管理，环境注入。
 
 ### css
-- MiniCssExtractPlugin，将css从`bundle文件里提取处理成一个css文件`。
-- optimize-css-assets-webpack-plugin，压缩CSS文件，`清除空格分号`（同时需要安装cssnano预处理器）
+
+- `MiniCssExtractPlugin` ，将 css 从 bundle 文件里提取处理成一个css文件。
+- `optimize-css-assets-webpack-plugin`，压缩CSS文件，`清除空格分号`（同时需要安装 `cssnano` 预处理器）
 
 ### HTML
-- html-webpack-plugin，清除html里的`空格换行`。（必用）
-- ZipWebpackPlugin，打包资源生成Zip包
 
-## 文件监听 - 文件发生变化时，自动构建
+- `html-webpack-plugin`，清除html里的 `空格换行` 。（必用）
+- `ZipWebpackPlugin` ，打包资源生成Zip包
+
+## 文件监听
+文件发生变化时，自动构建
+
 - 轮询判断文件最后编辑时间是否变化；
-- 当文件发生变化时，不会立即告诉监听者，先缓存起来，等aggregateTimeout完成后再更新
+- 当文件发生变化时，不会立即告诉监听者，先缓存起来，等 aggregateTimeout 完成后再更新
+
 ```json
 "build": "webpack --watch"
 ```
@@ -47,29 +54,35 @@ module.exports = {
   watch: true,
   watchOptions: {
     ignored: /node_modules/,
-    aggregateTimeout: 300, // 监听到文件变化后，默认等300MS后才去执行
-    poll：1000 // 判断文件是否有发生变化，是通过不断轮询去询问文件有没有变化，默认每秒询问1000次
+    // 监听到文件变化后，默认等300MS后才去执行
+    aggregateTimeout: 300,
+    // 判断文件是否有发生变化，是通过不断轮询去询问文件有没有变化，默认每秒询问1000次
+    poll：1000
   }
 }
 ```
+
 ## 热更新原理
+
 - 相比于文件监听热更新是存储于内存的，效率更高
 - 概念：
-  - webpack compile：将JS编译成bundle
-  - Bundle server：提供文件在浏览器的访问
-  - HMR Server：将更新了的文件发送给HMR Runtime
-  - HMR Runtime：会注入到浏览器，监听文件的变化并更新
+  - `webpack compile`：将 JS 编译成 bundle
+  - `Bundle server`：提供文件在浏览器的访问
+  - `HMR Server`：将更新了的文件发送给 `HMR Runtime`
+  - `HMR Runtime`：会注入到浏览器，监听文件的变化并更新
+
 ### 流程：
-1. 启动时，webpack compile将JS转化为bundle，并传给Bundle server，确保文件能被访问到。
-2. 在文件更新时，会经过webpack compile编译成bundle完，发送给HMR server，HS会监听到哪些文件发生了改变。（源代码）
-3. 然后HS会通知客户端的HR，然后HR会进行更新代码。
+
+1. 启动时，`webpack compile` 将 JS 转化为 `bundle` ，并传给 `Bundle server` ，确保文件能被访问到。
+2. 在文件更新时，会经过 `webpack compile` 编译成 bundle 完，发送给 `HMR server` ，`HMR Server` 会监听到哪些文件发生了改变。（源代码）
+3. 然后 `HMR Server` 会通知客户端的 `HMR Runtime`，然后 `HMR Runtime` 会进行更新代码。
 
 ## 文件指纹策略 - 版本管理，浏览器缓存。
 
-- hash：整个项目的构建相关，项目文件有修改则hash会跟着更改。跟着项目的compilation更改。
+- `hash`：整个项目的构建相关，项目文件有修改则hash会跟着更改。跟着项目的 `compilation` 更改。
   - `compilation` 代表一次新的编译，只要文件改动，就会被重新创建。
-  - `Compiler` 代表webpack从启动到关闭的生命周期。
-- chunkHash：和webpack打包的不同 `entry` 有关，「不同的entry」会生成不同的chunkHash值。（JS文件）
-- contentHash：根据文件内容变更。（css文件）
+  - `Compiler` 代表 webpack 从启动到关闭的生命周期。
+- `chunkHash`：和 webpack 打包的不同 `entry` 有关， 不同的entry会生成不同的 `chunkHash` 值。（JS文件）
+- `contentHash`：根据文件内容变更。（css文件）
   - 当解析顺序变化时，也会发生变化。
 
