--- a/打包器/webpack/进阶篇.md
+++ b/打包器/webpack/进阶篇.md
@@ -2,35 +2,38 @@
 - css 的后处理器（less和sass是打包前进行处理），自动补齐css3前缀。
 
 # 静态资源内联
-- `raw-loader`。内联HTML，例如：meta
+
+- `raw-loader`。内联 HTML，例如：meta
 - css样式文件。
-  - 直接`style-loader`打入到head里。(比较少用到)。
-  - 针对chunk的css代码，`html-inline-css-webpack-plugin`将打包好的css代码插入到head里。
-- meta等。raw-loader。
+  - 直接 `style-loader` 打入到 head 里。(比较少用到)。
+  - 针对 chunk 的 css 代码，`html-inline-css-webpack-plugin` 将打包好的 css 代码插入到head里。
+- meta 等。`raw-loader`。
 
 # source map
+
 - 将打包出来的压缩代码，指到源代码的位置。实现：使用「eval」将源代码包裹住。
 - 类型：
   - inline。不生成.map文件。将.map作为DataURL嵌入。
   - cheap。不包含错误堆栈中的「列」信息。
-  - module。包含loader的sourceMap。
+  - module。包含 loader 的 `sourceMap` 。
 
 # 页面共用资源分离
-- html-webpack-externals-plugin
-  - 分离基础库。
-  ```JS
-    new HtmlWebpackExternalsPlugin({
-      externals: [
-        {
-          module: 'jquery',
-          entry: 'https://code.jquery.com/jquery-3.6.0.min.js',
-          global: 'jQuery'
-        }
-      ]
-    }),
-  ```
+
+- `html-webpack-externals-plugin` 分离基础库。
+```JS
+  new HtmlWebpackExternalsPlugin({
+    externals: [
+      {
+        module: 'jquery',
+        entry: 'https://code.jquery.com/jquery-3.6.0.min.js',
+        global: 'jQuery'
+      }
+    ]
+  }),
+```
 - `splitChunksPlugin`。
-  - 对公共脚本进行分离。并且可以指定范围，例如：该资源的最小共用次数minChunks，包最小大小minSize等。
+  - 对公共脚本进行分离。并且可以指定范围，例如：该资源的最小共用次数 `minChunks` ，包最小大小 `minSize` 等。
+
   ```JS
     optimization: {
       splitChunks: {
@@ -46,8 +49,9 @@
   ```
 
 # tree shaking - （`prod模式`下自动打开） ESM
-- 概念：一个模块可能会有多个方法，主要某个被用到了，整个模块都会被打到「bundle」里去。`tree shaking`就是将用到的方法打入bundle，没用到的在`uglify`阶段檫除掉。
-- 要求：必须是ES6语法。CJS方法（模块导入）不支持。
+一个模块可能会有多个方法，主要某个被用到了，整个模块都会被打到 `bundle` 里去。`tree shaking` 就是将用到的方法打入 bundle ，没用到的在 `uglify` 阶段檫除掉。
+
+- 要求：必须是 ES6 语法。CJS方法（模块导入）不支持。
 - 擦除只擦除函数和变量，不擦除「类」。
 
 - DCE「Dead Code Elimination」（Elimination）代码中不会到达的代码。
@@ -56,31 +60,34 @@
   - 代码只影响死变量，只写不读。
 
 - 原理：
-  - ES6模块静态导入。对导入的模块进行「静态分析」。
+  - ES6模块静态导入。对导入的模块进行 `静态分析` 。
   - 分析过程中，对没有到达的代码进行标记。
-  - 在`uglify阶段`删除无用代码。
+  - 在 `uglify阶段` 删除无用代码。
 
-- uglify原理：（2.x需要转成es5才能进行压缩）
+- uglify 原理：（2.x需要转成es5才能进行压缩）
   - 将代码解析成AST。
   - 转化为一颗更小的AST。
   - 在输出代码。
 
 # scope Hoisting -（`prod模式`下自动打开）ESM
+
 - webpack模块机制
   - 打包时，模块依赖时会`进行函数包裹`
-  - `import会被转化成_webpack_require`，返回module.exports。
+  - `import会被转化成 _webpack_require`，返回 `module.exports`。
   - 最后打包出来是一个匿名函数，通过「__webpack_require__(0)」启动。
+
   ![](/image/ada29fefcc7e39a5f7a33bfa88cfcfc.png)
 
 - 存在问题： - 减少作用域
   - 函数包裹明显，导致打包`体积增大`。
-  - 函数闭包对依赖进行包裹，运行代码时创建`函数作用域`变多，`内存开销越大`。
+  - 函数闭包对依赖进行包裹，运行代码时创建 `函数作用域` 变多，`内存开销越大`。
 
-- 原理：将所有模块的代码`按照引用顺序放在一个函数作用域`里，并通过`重命名`一些变量解决冲突。
+- 原理：将所有模块的代码 `按照引用顺序放在一个函数作用域` 里，并通过 `重命名` 一些变量解决冲突。
   - 会把需要导入的文件放到导入者的顶部，例如：如果b依赖a，将a放在b的前面。
-  - 可以减少「函数声明」和「内存开销」。
+  - 可以减少 `函数声明` 和 `内存开销` 。
 
 # 代码分割 - chunks - 按需加载，懒加载
+
 - 会分割出多一个JS文件，并通过逻辑控制加载时间再去请求JS。
 - 适用的场景：
   - 抽离相同的代码到一个共享块。
@@ -101,12 +108,13 @@
 # [eslint](./project/eslint.md)
 
 # webpack打包工具库
+
 - 特性：
   - 打包了压缩版和非压缩版.
   - 支持AMD / CJS / ESM模块导入。
-    - es module。「import * as X from 'xxx'」
-    - CJS。「require('xxx')」
-    - AMD。「require(['xxx'], function(xxx) { xxx.add() })」
+    - es module。`import * as X from 'xxx'`
+    - CJS。`require('xxx')`
+    - AMD。`require(['xxx'], function(xxx) { xxx.add() })`
   - 上传到服务器。可以`<script>`导入。
 - 目录：
   ![](/image/dbd724065a6a4c3617328dee9b5d0b0.png)
@@ -123,10 +131,11 @@ module.exports = require('XXX')
 
 ## 原理： 将模板最后渲染为一个`字符串`，最后访问路由时返回对应的模板。
 ## 存在的问题：
-  - `浏览器的全局变量`，node上没有document，window。fetch，ajax才有的api，需要使用axios等替代。
-  - 需要用到CJS的模块化方式。
-  - Node没法解析css。通过`ignore-loader忽略CSS的解析`，或者通过`css in js`的形式。
-  - 对JS等文件不必使用hash的命名进行缓存，只返回一个html文件。
+  - `浏览器的全局变量`，node 上没有 document，window。fetch，ajax 才有的 api，需要使用 `axios` 等替代。
+  - 需要用到 CJS 的模块化方式。
+  - Node 没法解析 css。通过 `ignore-loader忽略CSS的解析` ，或者通过`css in js`的形式。
+  - 对 JS 等文件不必使用hash的命名进行缓存，只返回一个 html 文件。
+
 ## 解决方式：占位符
   - 在HTML添加占位符，将css通过读取文件，或者加载静态资源的方式加载。
   - `首屏数据`也同理。
