--- a/深入浅出vue/router/原理.md
+++ b/深入浅出vue/router/原理.md
@@ -1,6 +1,6 @@
 # 概述
-- createRouter 返回一个带有addRoute、push等方法的对象，并在 install 中实现了路由，注册了 router-link 和 router-view；
-- 通过 createRouterMatcher 创建的路由匹配对象，维护 currentRoute 等响应式变量，是我们能通过 router 或 route 访问到，并且，router-view 提供 component 渲染当前路由匹配到的组件。
+- `createRouter` 返回一个带有 `addRoute、push` 等方法的对象，并在 `install` 中实现了路由，注册了 `router-link` 和 `router-view` ；
+- 通过 `createRouterMatcher` 创建的路由匹配对象，维护 `currentRoute` 等响应式变量，是我们能通过 `router` 或 `route` 访问到，并且，router-view 提供 component 渲染当前路由匹配到的组件。
 
 # 细节
 
@@ -170,7 +170,7 @@ function navigate(
 ## push
 ```JS
 function createRouter() {
-  ... 
+  ...
   push(to: RouteLocationRaw | RouteLocation) {
     pushWithRedirect(to)
   }
@@ -214,7 +214,7 @@ function finalizeNavigation(
   replace?: boolean,
   data?: HistoryState
 ) {
-  ... 
+  ...
   // 通过 routerHistory.push 或者 replace 实现路由跳转
   if (isPush) {
     if (replace || isFirstNavigation)
