--- a/深入浅出vue/vue3/自定义渲染器.md
+++ b/深入浅出vue/vue3/自定义渲染器.md
@@ -1,18 +1,20 @@
 # vDom、跨端
-- vue 将所有和平台（例如：浏览器，Node）相关的操作，抽离成独立的方法，所以只需要实现以下方法，就可以实现vue3在一个平台的渲染。
-  - createNode 创建标签
-  - createText 创建文本
-  - insert 新增元素
-  - remote 删除元素
-  - setText 更新文本
-  - patchProps 修改属性
-  - parentNode、nextSibling 等方法实现节点的查找关系
 
-- 以上方法在 vue3 的 runtime-core 模块暴露。runtime-core 内部基于这些函数实现了整个 Vue 内部的所有操作，然后在 runtime-dom 中传入以上所有方法。默认是在 DOM 执行。
+- vue 将所有和平台（例如：浏览器，Node）相关的操作，抽离成独立的方法，所以只需要实现以下方法，就可以实现vue3在一个平台的渲染。
+  - `createNode` 创建标签
+  - `createText` 创建文本
+  - `insert` 新增元素
+  - `remote` 删除元素
+  - `setText` 更新文本
+  - `patchProps` 修改属性
+  - `parentNode、nextSibling` 等方法实现节点的查找关系
+
+- 以上方法在 vue3 的 `runtime-core` 模块暴露。`runtime-core` 内部基于这些函数实现了整个 `Vue` 内部的所有操作，然后在 `runtime-dom` 中传入以上所有方法。默认是在 DOM 执行。
 
 # createRenderer - 渲染器创建、自定义渲染
 
-- 通过参数 options 获取增删改查所有的函数
+- 通过参数 `options` 获取增删改查所有的函数
+
 ``` JS
 export default function createRenderer(options) {
   const {
@@ -37,7 +39,7 @@ export default function createRenderer(options) {
 }
 ```
 ## 使用
-- 通过 createRenderer 创建一个具体平台的渲染器，使其他平台也能使用 vue 内部的响应式和组件化等特性。
+- 通过 `createRenderer` 创建一个具体平台的渲染器，使其他平台也能使用 vue 内部的响应式和组件化等特性。
 ```JS
 const { render } = createRenderer({
   nodeOps: {
