--- a/运维/前端部署.md
+++ b/运维/前端部署.md
@@ -25,14 +25,16 @@ Cache-Control: max-age、Expires
 - 通过`content hash`更新资源。
 
 ## 覆盖式发布的问题 - 非覆盖式发布
+
 - 问题：页面和静态资源在部署时访问时出现的资源不匹配问题。
-- 网站静态文件只有一份，部署在`Nginx`的某个服务器。如果：
+- 网站静态文件只有一份，部署在 `Nginx` 的某个服务器。如果：
   - `先部署静态资源，部署期间访问`时，v1-html 会访问到v2版本的新静态资源，并按v1-hash缓存。如果用户本地有v1缓存，则能正常访问。没缓存则报错。
   - `先部署HTML，部署期间访问`时，v2-html会访问到v1的旧静态资源，按v2-hash缓存。一直找不到资源，持续报错。
 
 - HC：服务器会出现多份`xx.[hash].css`文件。
 
 ## web服务器结合CDN
+
 - 问题：
   - 多次部署时，文件逐渐增多，硬盘利用率低；
   - 文件在nignx web服务器下，深度将nginx，网站，部署耦合一起，无法适用CDN。
@@ -99,6 +101,7 @@ Cache-Control: max-age、Expires
     ```
     - 同理：也能实现一些根据UA或者IP的处理，实现灰度上线。
     - 缺点：每个用户都需要手动配置，不适应于移动端，无法获取精确的某个版本。仅适用于工程师。
+
   - ### 动态配置 + 服务端转发
     - 引入配置中心概念。独立的平台 / SDK，提供动态配置管理的解决方案，提供功能有配置管理、版本管理、权限管理、灰度发布。
     - 流程：主要在读取cookie信息后，读取配置中心数据，依据用户信息判断给用户访问什么环境，加载具体环境 index.html。
@@ -137,7 +140,7 @@ Cache-Control: max-age、Expires
 
 ### 3. 刚上线的版本发现有阻塞性 bug，如何做到秒级回滚，而非再次部署等 20 分钟甚至更久？
 - HTML文件非覆盖式发布，并如果有发布服务，对HTML进行缓存加工处理，当需要回滚时，直接切换HTML即可。
-- 在发布服务中，增加CDN域名替换，异常后在发布服务执行CDN域名替换一件设置。
+- 在发布服务中，增加CDN域名替换，异常后在发布服务执行CDN域名替换一键设置。
 
 ### 4. 如何实现一个预发环境，除了前端资源外都是线上环境，将变量控制前端环境内？
 - 对静态资源做加工，对HTML入口做小流量。
