feat: 数据结构整理

--- a/算法/一维数据结构.md
+++ b/算法/一维数据结构.md
@@ -5,12 +5,26 @@
 - 在数组里会将数组通过复制进行移动操作。
 
 # 链表
+添加删除元素比较频繁的情况下。
 
 - 删除和插入操作时，将指针指向下一个值，插入为O(1)。
 - 当访问数据中的任意数据时，为「O(n)」。
 
+```js
+class Node {
+  this.value = ''
+  this.next = nextNode
+
+  // 双向链表
+  this.prev = prevNode
+}
+```
+
 # 跳表 - redis
+链表 lookUp 时间复杂度为 On。（升唯，空间换时间）
+
 - 不只有一个指针，可以有多个指针，指向不同的位置。O(log n)
+- next 查找基数为 1 => 2
 
 # 栈
 - 先进后出。
@@ -21,21 +35,25 @@
 - 添加删除皆为O(1)，查询为O(n)。
 
 # 双端队列 - deque
+![](/image/711663657007_.pic.jpg)
 - stack + queue。可以在首部或者尾部添加或者删除元素。
 - 有一个指针指向前一个指针。
 
 # 优先队列 （priority queue）
-
 - 插入操作：O(1)
 - 取出操作：O(logN) - 按元素优先级取出
 - 实现：实现较为复杂多样：heap（二叉树堆，fibonacci堆。。。）、BST（binary search tree）、treap
 
 # 哈希表
 
-- 散列表，映射函数（哈希函数）映射到表中一个位置来访问记录。
+- 散列表，映射函数（哈希函数）将 `关键码` 映射到表中一个位置来访问记录。
 - 查询，添加，删除时间复杂度O(1).
-
 - 数据越分散越好。如果表映射到一个地方时即为 - 哈希碰撞。
-- 如果映射到同个位置，拉出一个链表进行存储多个值。如果多个查询时间复杂度会退化成O(n)
+
+## 原理
+将 `value` 传给哈希函数，计算出来的位置就是 `value` 存储的位置。
+
+## 拉链式解决冲突法
+- 如果映射到同个位置，`拉出一个链表` 进行存储多个值。如果多个查询时间复杂度会退化成O(n)
 
 - treeMap, treeSet实现的哈希表，时间复杂度能降为O(log n)
