--- a/算法/二维数据结构.md
+++ b/算法/二维数据结构.md
@@ -4,18 +4,20 @@
 # 树
 - 链表是特殊化的树。
 - 树是特殊化的图。
-- 树的遍历。
+- 树的遍历。O（n）
   - 前序。根左右
   - 中序。左根右
   - 后序。左右根
 
 ## 二叉搜索树，有序二叉树
-- 空树。或者
-- 左子树上「所有节点」，小于根节点的值。
-- 右子树「所有节点」，大于他根节点的值。
+- 左子树上 `所有节点` ，小于根节点的值。
+- 右子树 `所有节点` ，大于他根节点的值。
 - 中序遍历时为升序。
+- 空树。
 
-- 查询和操作，都是O(log n),如果一直查找不到时会退化成O(n)时间复杂度。
+## 复杂度
+- 查询和操作都是：O(log n)
+- 如果一直查找不到时会退化成O(n)时间复杂度。
 
 # 图
 - 树中是否有环
