--- a/算法/算法.md
+++ b/算法/算法.md
@@ -1,3 +1,9 @@
+# 递归
+- 向下进入不同的递归层，向上又回到原来一层。
+- 通过函数参数来传递变量
+- 在新的一层，除了参数其他的环境都是一份拷贝。（不会影响到其他层）
+
+
 # 分治，回溯 - 递归
 - 本质还是递归 - 最近重复性。
 
@@ -60,16 +66,19 @@
 
 
 # trie 树 - 单词查找树，键树
+![](/image/721663666653_.pic.jpg)
 - 通常用于统计和排序大量的字符串。词频统计，搜索等。
 - 利用字符串公共前缀减低查询时间开销。
+- 结合存储额外的信息，可以为用户做相应的推荐。
+
 ## 优点：
-  - 大限度的减少无关紧要的字符串的比较。
-  - 查询效率比哈希表高
+- 大限度的减少无关紧要的字符串的比较。
+- 查询效率比哈希表高
 
 ## 基本性质
 - 节点本身不存完整单词
 - 根节点出发，连接起来就成为对应的字符串。
-- 每个节点的所有子节点代表的字符都不相同。
+- 每个节点的所有子节点代表的字符都 `不相同` 。
 
 # 位运算
 ![](/image/4691ab28d21a9878ded6675736ddda6.png)
