feat: legacy notes;

--- a/性能优化/图片处理.md
+++ b/性能优化/图片处理.md
@@ -1,12 +1,10 @@
-# 图片分类
-
-## 图片处理方式分类
+# 图片处理方式分类
 
 - 无压缩。不压缩处理，BMP（bitmap） 格式。
 - 无损压缩。「对」图片所有数据进行压缩编码，保证图片质量同时降低图片尺寸。例如：PNG
 - 有损压缩。「不会对」图片所有数据进行编码压缩，主要处理人眼无法识别的图片细节。可以在同等图片质量的情况下降低图片的尺寸。例如：jpg
 
-## 图片格式分类
+# 图片格式分类
 - GIF。
   - 优点：支持透明和动画
   - gif只存储8位索引（也就是最多能表达2^8=256种颜色）。色彩少。
@@ -23,20 +21,58 @@
   - 优点：与png、jpg相比，相同的视觉体验下，WebP图像的尺寸缩小了大约30％。支持有损压缩、无损压缩、透明和动画。
   - 缺点：Google开发，兼容性不好，除了移动端和chrome。
 
-# 多图下的并发处理
-
-- http1.1下的图片并发，没有多路复用，同一域名下只能同时请求6个，设置优先加载的图片。通过先设置的div计算到图片是否在视口区域内。
-- 同时，设置HTTP2.0。
-
 # 图片大小
 
-- 假如一张`100px*100px`的图，该图包含`100*100px`的「像素点」。
-- 每个像素点都是通过`RGBA`色道进行存储。
-- 每个色道都有`0~255`个取值。
-- 色道`2^8 = 256`，8位为1b，每个像素为4个色道，所以一个像素点需要4b，所以整张图需要10000*4b = 39kb
+- 假如一张 `100px*100px` 的图，该图包含 `100*100px` 的「像素点」。
+- 每个像素点都是通过 `RGBA` 色道进行存储。
+- 每个色道都有 `0~255` 个取值。
+- 色道 `2^8 = 256` ，8位为1b，每个像素为4个色道，所以一个像素点需要4b，所以整张图需要 `10000*4b = 39kb`
 
-## 优化方向：
+# 基于图片本身出发优化思路
 - 减少单位像素的字节数。
-  - 有损无损压缩，有损通过删除一些像素数据；无损，通过一些算法，存储相近色值像素点的差值，「在像素点不变的下」减少存储体积。但会增加压缩的时间。
-  - 满足需求的情况下使用最小的图片格式，使用webp，还支持动画和透明，gif更改为MP4。
+  - 有损无损压缩，有损通过删除一些像素数据；无损，通过一些算法，存储相近色值像素点的差值，`在像素点不变的下` 减少存储体积。但会增加压缩的时间。
+  - 满足需求的情况下使用最小的图片格式，使用 `webp` ，还支持动画和透明，gif更改为 `MP4` 。
 - 减少图片总的像素个数。根据设备视口宽高，通过七牛等图片裁剪服务，将图片进行「图片格式转换，按尺寸裁剪图片」。
+
+# 业界常用优化思路
+
+## 普通图片
+- 懒加载。
+  - scroll事件。`兼容性好`，同适合 `webview`
+  ```jsx
+    // scroll 事件
+    imgDom.addEventListener('scroll', () => {
+      // 视窗高度(dom.clientHeight) + 滚动距离(dom.scrollTop) > 元素距离顶部距离(image.offsetTop)
+    })
+
+    // 链接后置
+    <img
+      src=""
+      data-src="" />
+    ```
+  - IntersectionObserver API。 移动端兼容性差些。
+
+## 高保真图片 - 较大
+- 懒加载。
+- 模糊备用图 + load 事件 + data-src
+  ```jsx
+  // 图片模糊
+  .image__thumb {
+    filter: blur(25px);
+  }
+
+  <img
+    class="img__thumb"
+    style={{ visibility: status === 'success' ? "hidden" : "visible" }}
+  />
+  <img
+    onLoad={() => onChangeImageStatus('success')}
+    onError={() =>onChangeImageStatus('error')} />
+  ```
+
+## 长图
+- 懒加载。
+- [sharp](https://www.npmjs.com/package/sharp) 按长度切图。
+- 解决一些机型的毛边缝隙效果。
+  - `vertical-center` 设置垂直中心值来解决基线对齐问题
+  - `flex-direction` 设置为 `column` 为子元素做垂直排列
