--- a/浏览器/事件循环.md
+++ b/浏览器/事件循环.md
@@ -13,7 +13,7 @@
 
 ![](https://static001.geekbang.org/resource/image/2e/05/2eb6a8ecb7cb528da4663573d74eb305.png)
 
-4. 如何处理高优先级问题？例如：DOM操作频繁，同步会导致执行效率下降，异步会影响实时性。「宏任务&微任务」 --- 每个宏任务下都包含一个微任务队列，如DOM发生了变化，就会将变化添加到微任务中，在宏任务执行完后，会将微任务队列里的任务执行完再执行下一个宏任务。
+4. 如何处理高优先级问题？例如：DOM操作频繁，同步会导致执行效率下降，异步会影响实时性。「宏任务 & 微任务」
 
 5. 单个任务执行时间过久？会造成页面卡顿现象，通过回调功能实现。
 
@@ -44,7 +44,7 @@ void MainTherad(){
     //执行消息队列中的任务
     Task task = task_queue.takeTask();
     ProcessTask(task);
-    
+
     //执行延迟队列中的任务
     ProcessDelayTask()
 
@@ -89,9 +89,11 @@ void MainTherad(){
 - es5后引入Promise，js引擎本身也能发起任务。
 
 - 宏任务：由宿主发起的任务。
-- 微任务：JS引擎发起的任务。
+- 微任务：JS引擎发起的任务。`MutationObserver，Promise.resolve`
 
 ## 宏任务微任务执行
+首先执行 MicroTask 队列， 一次执行完所有 MicroTask 队列任务;
+然后执行 MacroTask 队列，一个执行完后，检测 MicroTask 是否为空；
 
 - 宏任务执行
 
@@ -100,13 +102,9 @@ void MainTherad(){
   - 执行完后，删除该任务
   - 统记执行完成的时长
 
-- 异步回调的形式
-  - 一种是将其做成一个任务放在「消息队列尾部」。定时器
-  - 一种是直接添加在「微任务尾部」。MutationObserver，Promise.resolve
-
 - 微任务的执行：
   - 当前的宏任务的JS引擎快退出全局执行上下文并清空调用栈时，JS引擎会检查全局执行上下文中的微任务，然后按照顺序执行队列中的微任务。「检查点」
-  - 如果在执行微任务中产生了新的微任务，会推入到当前的微任务队列中，直到当前微任务队列执行完。
+  - 如果在执行微任务中产生了新的微任务，会推入到微任务队列中，直到当前微任务队列执行完。
   - 会延长宏任务的执行时间，宏任务执行时间 += 微任务执行时间
 
 - MutationObserver，采用「观察者模式」来监听DOM变化，属性的变化，节点的增减，内容的变化。会多次DOM变化后，「一次性」触发异步调用。
