--- a/浏览器安全/浏览器系统安全.md
+++ b/浏览器安全/浏览器系统安全.md
@@ -38,7 +38,7 @@
 - 其最小的保护单位是进程，这也是单进程浏览器无法被保护的原因，因为单进程需要各种通信访问系统资源。这也意味着安全沙箱保护的环境没有「读写操作系统」的功能。
 
 ## 安全沙箱如何影响各个模块
-- 持久存储。由于渲染进程没有独写操作系统的功能，都是通过IPC进行通信，所以涉及到的Cookie，缓存文件的独写都在「浏览器内核」中去实现。
+- 持久存储。由于渲染进程没有独写操作系统的功能，都是通过IPC进行通信，所以涉及到的Cookie，缓存文件的读写都在「浏览器内核」中去实现。
 - 网络访问。如果渲染进程需要访问网络，在浏览器内核处理URL之前，会检查渲染进程「是否有权限」请求该URL，例如：是否跨站点请求，是否HTTPS包含了HTTP请求。（重点）
 - 用户交互。渲染进程上的手势，其实渲染进程是不能操作窗口句柄的也是为了限制渲染进程监控用户输入。「操作系统是将用户输入事件传输给浏览器内核」。具体流程：
   - 渲染进程在渲染流水线后，渲染出位图，发送到浏览器内核，所以浏览器内核存有页面的信息。
