feat: some new understanding about js modules;

--- a/JS/模块化.md
+++ b/JS/模块化.md
@@ -4,33 +4,105 @@
 
 # 演变过程
 ## 1. 全局function
-- 将不同功能封装成不同的全局函数。
-- 问题：命名污染，数据不安全，模块成员看不出直接关系。
+```js
+// 将不同功能封装成不同的全局函数。
+const a = () => {
+    ...
+}
+
+const b = () => {
+    ...
+}
+
+// 问题：命名污染，数据不安全，模块成员看不出直接关系。
+```
+
 ## 2. namespace
-- 对象的简单封装，减少了全局变量，解决命名冲突。
-- 问题：数据不安全。
+```js
+// 对象的简单封装，减少了全局变量，解决命名冲突。
+const a = {
+    _count : 0,
+    a() {
+        ...
+    },
+    b() {
+        ...
+    }
+}
+
+// 问题：可以访问内部_count属性
+// 🌧️ 可以修改
+```
+
 ## 3. IIFE模式
 - 匿名函数自调用。将数据和方法封装到一个函数内部，通过 window 属性暴露出来。数据私有化，只能拿到暴露的方法。
 - 问题：如果依赖另一个模块。
 ```JS
-(function(window) {
+const module1 = (function() {
+    const _count = 1
   // ...
   //暴露行为
-  window.myModule = { foo, bar } //ES6写法
-})(window)
+  return {
+    a,b
+  }
+})()
+// _count访问不到
 ```
-## 4. IIFE 增强 - 引入依赖
+## 4. IIFE 增强
 - 主要模式
 ```JS
-(function(window, $) {
-  // ...
-  //暴露行为
-  window.myModule = { foo, bar } //ES6写法
-})(window, jQuery)
+(function(module1) {
+    mod.a = ...
+    // ...
+    //暴露行为
+    return mod;
+})(module1)
+// 附加一个新的a方法；
 ```
 
-# CommonJS
-对代码进行解析，整理出代码中的所有模块依赖关系，相关的模块代码都打包在一起， `形成一个完整的JS文件` 。服务器端加载运行是 `同步加载` 。浏览器端需要编译打包。
+## 5. 浏览器加载依赖问题
+```js
+var module1 = (function(mod){
+    mod.a = ... // a依赖mod，浏览器中，可能mod未加载
+    // ...
+    //暴露行为
+    return mod;
+})(window.module1 || {}, Vue, ...)
+
+// 允许传入空对象
+// 同时，传入不同的依赖库，依赖关系更明显，也保证其独立性
+
+// 异步加载问题 => AMD
+```
+
+# AMD规范 - Asynchronous Module Definition
+- 异步加载，依赖前置。
+- 加载完依赖后立即执行依赖模块，依赖加载成功后执行回调
+```js
+// 有依赖的模块
+define(['module1', 'module2'], function(m1, m2) {
+  return module
+})
+// 引入
+// require 函数
+require(['module1', 'module2'], function(m1, m2){
+})
+```
+- RequireJS提供define，遵循规范好处：
+1. 执行顺序不会出错。
+2. 不会影响全局环境。
+
+# CommonJS - require.js
+## 解决：
+- 实现js文件的异步加载，避免网页失去响应；对代码进行解析，整理出代码中的所有模块依赖关系，相关的模块代码都打包在一起， `形成一个完整的JS文件` 。
+- 管理模块之间的依赖性，便于代码的编写和维护。
+```js
+require([module1, module2], function() {
+    ...
+})
+// require()异步加载moduleA，moduleB和moduleC，浏览器不会失去响应；
+// 它指定的回调函数，只有前面的模块都加载成功后，才会运行，解决了依赖性的问题。
+```
 
 ## 特点
 - 当一个模块被脚本引用后，默认会得到一个空对象；
@@ -81,27 +153,6 @@ lib.a // 仍旧是module.exports
 ```
 - ps: webpack 对于CJS的实现，`require`会替换掉`module`下面的`exports`引用。但内部还存留着 `exports`。
 ![](/image/ed499f52f94469b646e543a3f9c64ef.png)
-
-# AMD规范
-- 异步加载，依赖前置。
-- 加载完依赖后立即执行依赖模块，依赖加载成功后执行回调
-```JS
-// 定义
-define(function() {
-  return module
-})
-// 有依赖的模块
-define(['module1', 'module2'], function(m1, m2) {
-  return module
-})
-// 引入
-require(['module1', 'module2'], function(m1, m2){
-  //  使用m1/m2
-})
-```
-- RequireJS提供define，遵循规范好处：
-1. 执行顺序不会出错。
-2. 不会影响全局环境。
 
 # CMD规范
 - 模块异步，延迟执行，就近依赖，先加载所有依赖模块，运行时才执行require内容，按顺序执行。
@@ -173,9 +224,12 @@ import { value } from './module1.js'
 ## CJS：是在「加载时执行」。
   - 值拷贝。
   - 可以缓存值，修改值
-  - 输出的是模块的运行结果
 
 ## 对于循环依赖
-- CJS， 一旦出现了某个模块被循环加载，「只输出已经执行的部分，未执行的部分不会输出」
-- ESM， 不需要关心是否发生循环依赖，只是生成一个指向被加载模块的引用。「需要开发者保证取值时能取到值」
+- 其中，出现循环依赖的模块，会被处理为「未完成状态」。
+- CJS， 一旦出现了某个模块被循环加载，模块的导入是同步的，会立即执行模块的代码，因此当出现循环依赖时，其中一个模块的导出值还没有被赋值。
+- ESM， 循环依赖是允许的，如果它的导出还没有完成，那么导入的值会是一个空对象。直到导出完成后，导入的值才会被更新。
+
+# 参考文章
+> require.js: https://requirejs.org/
 
