feat: box model;

--- a/css/盒子模型.md
+++ b/css/盒子模型.md
@@ -21,7 +21,11 @@
 
 ## 4. 外边距重叠
 
-- 普通流文档中，垂直外边距会进行合并，取最大值，而行内框，浮动框，绝对定位不会。「BFC」
+- 相邻兄弟元素：普通流文档中，垂直外边距会进行合并，取最大值，而行内框，浮动框，绝对定位不会。「BFC」
+- 没有内容将父元素和后代元素隔开：会出现这些外边距的折叠，重叠部分最终会溢出到父代元素的外面。
+- 空的区块：则会出现其上下外边距的折叠。
+
+> 掌握外边距折叠 https://developer.mozilla.org/zh-CN/docs/Web/CSS/CSS_box_model/Mastering_margin_collapsing
 
 # BFC
 
