--- a/性能优化/脚本加载.md
+++ b/性能优化/脚本加载.md
@@ -1,12 +1,15 @@
 # script
 
+## async defer 
+共同点：均不阻塞DOM渲染
+
 ## defer
-- 告诉浏览器不要等待脚本。脚本会在下载进程里下载，然后等DOM解析完成后，即DOMContentLoaded之前再执行脚本。
+- 告诉浏览器`渲染进程`不要等待脚本。脚本会在下载进程里下载，然后等DOM解析完成后，即`DOMContentLoaded`之前再执行脚本。
 - 能保证脚本的执行顺序。
 - 模块脚本总是被延迟的。
 
 ## async
-- 浏览器开始时会扫描整个HTML文件，如果遇到async会推到延迟队列中去进行异步加载。
+- 如果遇到async会推到延迟队列中去进行异步加载。
 - 加载完成后，立即推到消息队列执行。
 
 ## 动态脚本
