feat: add network priority;

--- a/性能优化/预加载.md
+++ b/性能优化/预加载.md
@@ -14,3 +14,11 @@
 ## chrome网络栈
 ![](https://image.fundebug.com/2019-0411-06.png)
 - 使用as属性预加载的资源将具有和相同资源类型的优先级。style > script > 异步script
+
+# 网络请求的优先级
+
+- 最高：html、style
+
+- 高：font、fetch、script
+
+- 低：image、track
