--- a/算法/算法.md
+++ b/算法/算法.md
@@ -116,3 +116,31 @@ x & (1 << (n - 1))// 3. 获取x第N位的幂值
 ```
 
 ## 剪枝
+
+# 布隆过滤器 Bloom Filter
+
+## 解决问题
+- hash 表 + 拉链存储重复元素，「当需要判断元素存不存在一个表里时」，不需要存储所有的元素本身
+
+## 特点
+- 优点：空间效率和查询时间远远超过一般的算法
+- 缺点：有一定的误识别率和删除困难「模糊查询」
+- 二进制存储 + hash索引函数
+- 用来作为查询时候的一层过滤
+
+## 结论
+当将元素全部插入进去布隆过滤器后，当他验证元素对应存在的二进制位为1时，我们只能说元素可能存在在过滤器里。但只要有一个二进制位位0时，他一定不存在。
+
+## 应用
+- 比特币网络
+- 分布式系统
+- redis 缓存
+- 垃圾邮件，评论过滤
+
+# LRU cache
+
+## 特点
+- 要点：大小，替换策略
+- hash 表，双向链表
+- O(1)查询, O(1) 修改更新
+- ![alt text](image.png)
